--- a/Database/MongoDB/cine21_crawling_hands_on.ipynb
+++ b/Database/MongoDB/cine21_crawling_hands_on.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -55,7 +55,7 @@
       "<a href=\"/db/person/info/?person_id=2552\"><img alt=\"\" class=\"people_thumb\" src=\"http://image.cine21.com/resize/cine21/person/2019/1211/11_32_33__5df055413c01a[X145,145].jpg\" target=\"_blank\"/></a>\n",
       "<div class=\"name\"><a href=\"/db/person/info/?person_id=2552\">전도연(1편)</a></div>\n",
       "<ul class=\"num_info\">\n",
-      "<li><span class=\"tit\">흥행지수</span><strong>72,695</strong></li>\n",
+      "<li><span class=\"tit\">흥행지수</span><strong>71,991</strong></li>\n",
       "<!--\r\n",
       "\t\t\t\t\t\t<li><a href=\"#\" class=\"btn_graph\"><span class=\"ico\"></span><span>흥행성적<br />그래프로 보기</span></a></li>\r\n",
       "\t\t\t\t\t\t-->\n",
@@ -75,7 +75,7 @@
       "<a href=\"/db/person/info/?person_id=13093\"><img alt=\"\" class=\"people_thumb\" src=\"http://image.cine21.com/resize/cine21/person/2010/0518/P0000002_02[X145,145].jpg\" target=\"_blank\"/></a>\n",
       "<div class=\"name\"><a href=\"/db/person/info/?person_id=13093\">윤여정(2편)</a></div>\n",
       "<ul class=\"num_info\">\n",
-      "<li><span class=\"tit\">흥행지수</span><strong>70,101</strong></li>\n",
+      "<li><span class=\"tit\">흥행지수</span><strong>69,492</strong></li>\n",
       "<!--\r\n",
       "\t\t\t\t\t\t<li><a href=\"#\" class=\"btn_graph\"><span class=\"ico\"></span><span>흥행성적<br />그래프로 보기</span></a></li>\r\n",
       "\t\t\t\t\t\t-->\n",
@@ -101,7 +101,7 @@
       "<a href=\"/db/person/info/?person_id=1533\"><img alt=\"\" class=\"people_thumb\" src=\"http://image.cine21.com/resize/cine21/person/2019/1226/11_24_48__5e0419f0a5c08[X145,145].jpg\" target=\"_blank\"/></a>\n",
       "<div class=\"name\"><a href=\"/db/person/info/?person_id=1533\">정우성(1편)</a></div>\n",
       "<ul class=\"num_info\">\n",
-      "<li><span class=\"tit\">흥행지수</span><strong>66,085</strong></li>\n",
+      "<li><span class=\"tit\">흥행지수</span><strong>65,448</strong></li>\n",
       "<!--\r\n",
       "\t\t\t\t\t\t<li><a href=\"#\" class=\"btn_graph\"><span class=\"ico\"></span><span>흥행성적<br />그래프로 보기</span></a></li>\r\n",
       "\t\t\t\t\t\t-->\n",
@@ -121,7 +121,7 @@
       "<a href=\"/db/person/info/?person_id=66161\"><img alt=\"\" class=\"people_thumb\" src=\"http://image.cine21.com/resize/cine21/person/2019/0821/16_23_11__5d5cf15f3a41f[X145,145].jpg\" target=\"_blank\"/></a>\n",
       "<div class=\"name\"><a href=\"/db/person/info/?person_id=66161\">배성우(1편)</a></div>\n",
       "<ul class=\"num_info\">\n",
-      "<li><span class=\"tit\">흥행지수</span><strong>59,475</strong></li>\n",
+      "<li><span class=\"tit\">흥행지수</span><strong>58,900</strong></li>\n",
       "<!--\r\n",
       "\t\t\t\t\t\t<li><a href=\"#\" class=\"btn_graph\"><span class=\"ico\"></span><span>흥행성적<br />그래프로 보기</span></a></li>\r\n",
       "\t\t\t\t\t\t-->\n",
@@ -141,7 +141,7 @@
       "<a href=\"/db/person/info/?person_id=48845\"><img alt=\"\" class=\"people_thumb\" src=\"http://image.cine21.com/resize/cine21/person/2019/0515/10_41_13__5cdb6e39cca9c[X145,145].jpg\" target=\"_blank\"/></a>\n",
       "<div class=\"name\"><a href=\"/db/person/info/?person_id=48845\">라미란(1편)</a></div>\n",
       "<ul class=\"num_info\">\n",
-      "<li><span class=\"tit\">흥행지수</span><strong>52,057</strong></li>\n",
+      "<li><span class=\"tit\">흥행지수</span><strong>51,681</strong></li>\n",
       "<!--\r\n",
       "\t\t\t\t\t\t<li><a href=\"#\" class=\"btn_graph\"><span class=\"ico\"></span><span>흥행성적<br />그래프로 보기</span></a></li>\r\n",
       "\t\t\t\t\t\t-->\n",
@@ -161,7 +161,7 @@
       "<a href=\"/db/person/info/?person_id=67495\"><img alt=\"\" class=\"people_thumb\" src=\"http://image.cine21.com/resize/cine21/still/2019/0327/11_24_22__5c9aded62c2e8[X145,145].jpg\" target=\"_blank\"/></a>\n",
       "<div class=\"name\"><a href=\"/db/person/info/?person_id=67495\">김무열(1편)</a></div>\n",
       "<ul class=\"num_info\">\n",
-      "<li><span class=\"tit\">흥행지수</span><strong>47,718</strong></li>\n",
+      "<li><span class=\"tit\">흥행지수</span><strong>47,375</strong></li>\n",
       "<!--\r\n",
       "\t\t\t\t\t\t<li><a href=\"#\" class=\"btn_graph\"><span class=\"ico\"></span><span>흥행성적<br />그래프로 보기</span></a></li>\r\n",
       "\t\t\t\t\t\t-->\n",
@@ -181,7 +181,7 @@
       "<a href=\"/db/person/info/?person_id=64972\"><img alt=\"\" class=\"people_thumb\" src=\"http://image.cine21.com/resize/cine21/still/2019/0326/17_55_00__5c99e8e403746[X145,145].jpg\" target=\"_blank\"/></a>\n",
       "<div class=\"name\"><a href=\"/db/person/info/?person_id=64972\">정만식(2편)</a></div>\n",
       "<ul class=\"num_info\">\n",
-      "<li><span class=\"tit\">흥행지수</span><strong>46,266</strong></li>\n",
+      "<li><span class=\"tit\">흥행지수</span><strong>45,820</strong></li>\n",
       "<!--\r\n",
       "\t\t\t\t\t\t<li><a href=\"#\" class=\"btn_graph\"><span class=\"ico\"></span><span>흥행성적<br />그래프로 보기</span></a></li>\r\n",
       "\t\t\t\t\t\t-->\n",
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -250,27 +250,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "전도연\n",
-      "72695\n",
-      "윤여정\n",
-      "70101\n",
-      "정우성\n",
-      "66085\n",
-      "배성우\n",
-      "59475\n",
-      "라미란\n",
-      "52057\n",
-      "김무열\n",
-      "47718\n",
-      "정만식\n",
-      "46266\n"
+     "ename": "AttributeError",
+     "evalue": "ResultSet object has no attribute 'select_one'. You're probably treating a list of elements like a single element. Did you call find_all() when you meant to call find()?",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-8-abc4ebc01a1c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      7\u001b[0m     \u001b[0mactor_name\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mre\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msub\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"\\(\\w*\\)\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m''\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mactor\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m     \u001b[0mactor_hits\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mhits\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreplace\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m','\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m''\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 9\u001b[1;33m     \u001b[0mmovie_lists\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmovie\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mselect_one\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'li.people_li ul.mov_list span'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     10\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mmovie_list\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mmovie_lists\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmovie_list\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\envs\\venv\\lib\\site-packages\\bs4\\element.py\u001b[0m in \u001b[0;36m__getattr__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   2079\u001b[0m         \u001b[1;34m\"\"\"Raise a helpful exception to explain a common code fix.\"\"\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2080\u001b[0m         raise AttributeError(\n\u001b[1;32m-> 2081\u001b[1;33m             \u001b[1;34m\"ResultSet object has no attribute '%s'. You're probably treating a list of elements like a single element. Did you call find_all() when you meant to call find()?\"\u001b[0m \u001b[1;33m%\u001b[0m \u001b[0mkey\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   2082\u001b[0m         )\n",
+      "\u001b[1;31mAttributeError\u001b[0m: ResultSet object has no attribute 'select_one'. You're probably treating a list of elements like a single element. Did you call find_all() when you meant to call find()?"
      ]
     }
    ],
@@ -279,11 +271,21 @@
     "\n",
     "actors = soup.select(\"ul.people_list li.people_li div.name\")\n",
     "hits = soup.select(\"ul.people_list li.people_li ul.num_info li strong\")\n",
+    "movie = soup.select(\"ul.people_list\")\n",
     "for index, actor in enumerate(actors):\n",
     "    actor_name = re.sub(\"\\(\\w*\\)\",'',actor.text)\n",
-    "    print(actor_name)\n",
-    "    print(int(hits[index].text.replace(',','')))\n"
+    "    actor_hits = int(hits[index].text.replace(',',''))\n",
+    "    \n",
+    "    \n",
+    "    \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
