nan값 예외처리 추가

--- a/Pandas_library/전국도시공원분석_리뉴얼.ipynb
+++ b/Pandas_library/전국도시공원분석_리뉴얼.ipynb
@@ -3899,7 +3899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -3917,6 +3917,8 @@
     "phone_2 = \"+82-10-134-5678\"\n",
     "\n",
     "def phone_number(phone):\n",
+    "    if pd.isna(phone):\n",
+    "        return phone\n",
     "    num = phone.split(\"-\")\n",
     "    num_len = len(num) // 2\n",
     "    num[num_len] = re.sub(\"\\w\",\"*\",num[num_len])\n",
@@ -3930,10 +3932,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nan\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(phone_number(np.nan))"
+   ]
   }
  ],
  "metadata": {
