--- a/R_Grammar/R_vector_grammar.ipynb
+++ b/R_Grammar/R_vector_grammar.ipynb
@@ -1959,6 +1959,402 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       ".list-inline {list-style: none; margin:0; padding: 0}\n",
+       ".list-inline>li {display: inline-block}\n",
+       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
+       "</style>\n",
+       "<ol class=list-inline><li>5</li><li>7</li><li>9</li></ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 5\n",
+       "\\item 7\n",
+       "\\item 9\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 5\n",
+       "2. 7\n",
+       "3. 9\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1] 5 7 9"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# 벡터 사칙연산 -> 각 요소끼리 자동으로 계산\n",
+    "c(1,2,3) + c(4,5,6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning message in var1 + var2:\n",
+      "\"두 객체의 길이가 서로 배수관계에 있지 않습니다\"\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       ".list-inline {list-style: none; margin:0; padding: 0}\n",
+       ".list-inline>li {display: inline-block}\n",
+       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
+       "</style>\n",
+       "<ol class=list-inline><li>6</li><li>8</li><li>10</li><li>12</li><li>10</li></ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 6\n",
+       "\\item 8\n",
+       "\\item 10\n",
+       "\\item 12\n",
+       "\\item 10\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 6\n",
+       "2. 8\n",
+       "3. 10\n",
+       "4. 12\n",
+       "5. 10\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1]  6  8 10 12 10"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# 벡터 순환원리 \n",
+    "var1<-c(1,2,3,4)\n",
+    "var2<-c(5,6,7,8,9)\n",
+    "var1+var2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "4"
+      ],
+      "text/latex": [
+       "4"
+      ],
+      "text/markdown": [
+       "4"
+      ],
+      "text/plain": [
+       "[1] 4"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "4"
+      ],
+      "text/latex": [
+       "4"
+      ],
+      "text/markdown": [
+       "4"
+      ],
+      "text/plain": [
+       "[1] 4"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# 벡터 길이 출력  : length(), NROW()\n",
+    "vec1<-c(1,2,3,4)\n",
+    "length(vec1)\n",
+    "NROW(vec1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "TRUE"
+      ],
+      "text/latex": [
+       "TRUE"
+      ],
+      "text/markdown": [
+       "TRUE"
+      ],
+      "text/plain": [
+       "[1] TRUE"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "TRUE"
+      ],
+      "text/latex": [
+       "TRUE"
+      ],
+      "text/markdown": [
+       "TRUE"
+      ],
+      "text/plain": [
+       "[1] TRUE"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "FALSE"
+      ],
+      "text/latex": [
+       "FALSE"
+      ],
+      "text/markdown": [
+       "FALSE"
+      ],
+      "text/plain": [
+       "[1] FALSE"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# 벡터에 특정 문자 포함 여부 찾기\n",
+    "var1<-c(1,2,3,4,'가')\n",
+    "3 %in% var1\n",
+    "'가' %in% var1\n",
+    "'나' %in% var1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       ".list-inline {list-style: none; margin:0; padding: 0}\n",
+       ".list-inline>li {display: inline-block}\n",
+       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
+       "</style>\n",
+       "<ol class=list-inline><li>5</li><li>-3</li><li>8</li><li>&lt;NA&gt;</li></ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 5\n",
+       "\\item -3\n",
+       "\\item 8\n",
+       "\\item <NA>\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 5\n",
+       "2. -3\n",
+       "3. 8\n",
+       "4. &lt;NA&gt;\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1]  5 -3  8 NA"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       ".list-inline {list-style: none; margin:0; padding: 0}\n",
+       ".list-inline>li {display: inline-block}\n",
+       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
+       "</style>\n",
+       "<ol class=list-inline><li>5</li><li>-3</li><li>8</li></ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 5\n",
+       "\\item -3\n",
+       "\\item 8\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 5\n",
+       "2. -3\n",
+       "3. 8\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1]  5 -3  8"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       ".list-inline {list-style: none; margin:0; padding: 0}\n",
+       ".list-inline>li {display: inline-block}\n",
+       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
+       "</style>\n",
+       "<ol class=list-inline><li>1</li><li>3</li><li>4</li></ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 1\n",
+       "\\item 3\n",
+       "\\item 4\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 1\n",
+       "2. 3\n",
+       "3. 4\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1] 1 3 4"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# 특정 벡터요소 추출하기\n",
+    "z<-c(5,2,-3,8,NA)\n",
+    "# 1. 논리테스트 => True에 해당하는 벡터요소 반환, NA 출력해버림\n",
+    "w<-z[z*z>8]\n",
+    "w\n",
+    "\n",
+    "# 2. subset함수 => subset(데이터, 조건) , NA 출력 안함!!\n",
+    "y<-subset(z, z*z>8)\n",
+    "y\n",
+    "\n",
+    "# 3. 특정조건 만족하는 벡터 인덱스 반환 => which(조건)\n",
+    "which(z*z>8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       ".list-inline {list-style: none; margin:0; padding: 0}\n",
+       ".list-inline>li {display: inline-block}\n",
+       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
+       "</style>\n",
+       "<ol class=list-inline><li>'apple'</li><li>'banana'</li><li>'grapes'</li></ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 'apple'\n",
+       "\\item 'banana'\n",
+       "\\item 'grapes'\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 'apple'\n",
+       "2. 'banana'\n",
+       "3. 'grapes'\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1] \"apple\"  \"banana\" \"grapes\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# 벡터 이름 지정 추출 => names()\n",
+    "fruits<-c(1,2,3)\n",
+    "names(fruits)<-c('apple','banana','grapes')\n",
+    "names(fruits)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "NULL"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# names(vector)로 따로 지정안해주면 없다고(NULL)로 뜸\n",
+    "fruits<-c(1,2,3)\n",
+    "names(fruits)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -1977,7 +2373,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "3.6.1"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
